# pandora_gazebo

./: .gitignore  README.md
pandora_gazebo/: CMakeLists.txt  package.xml
pandora_gazebo_controllers/: CMakeLists.txt  package.xml
pandora_gazebo_controllers/config/: pandora_gazebo_controllers.yaml  pandora_gears_wheel_controllers.yaml  pandora_joint_state_controllers.yaml  pandora_kinect_controllers.yaml  pandora_laser_controllers.yaml  pandora_linear_elevator_controller.yaml  pandora_linear_head_controllers.yaml  pandora_pioneer3at_wheel_controllers.yaml
pandora_gazebo_controllers/config/effort_controllers/: pandora_laser_controllers.yaml  pandora_linear_elevator_controller.yaml
pandora_gazebo_controllers/config/position_controllers/: pandora_joint_state_controller.yaml  pandora_kinect_controllers.yaml
pandora_gazebo_controllers/launch/: gears_controllers.launch  pandora_gazebo_controllers.launch  pandora_gazebo_effort_controllers.launch  pandora_gazebo_position_controllers.launch  woody_controllers.launch
pandora_gazebo_controllers/launch/gears/: default_gears_controllers.launch  pandora_gears_controllers.launch
pandora_gazebo_controllers/launch/woody/: default_woody_controllers.launch  pandora_woody_controllers.launch
pandora_gazebo_description/: CMakeLists.txt  package.xml
pandora_gazebo_description/gazebo_sensors/: co2_sensor.gazebo.xacro
pandora_gazebo_description/gears/gazebo_urdf/: gears_simplified.gazebo.xacro
pandora_gazebo_description/gears/launch/: gears_gazebo_description.launch
pandora_gazebo_description/gears/urdf_gazebo/: gears.gazebo.xacro  physics.gazebo.xacro  sdf_configurations.xacro
pandora_gazebo_description/gio/launch/: gio_gazebo_description.launch
pandora_gazebo_description/gio/urdf_gazebo/: gio.gazebo.xacro  references.gazebo.xacro  sdf_configurations.xacro
pandora_gazebo_description/launch/gears/: gears_gazebo_description.launch  gears_simplified_gazebo_description.launch
pandora_gazebo_description/launch/woody/: woody_gazebo_description.launch  woody_simplified_gazebo_description.launch
pandora_gazebo_description/monstertruck/launch/: monstertruck_gazebo_description.launch
pandora_gazebo_description/monstertruck/urdf_gazebo/: monstertruck.gazebo.xacro  references.gazebo.xacro  sdf_configurations.xacro
pandora_gazebo_description/sdf_elements/plugins/: pandora_differential_plugin.gazebo.xacro  pandora_fdir_plugin.gazebo.xacro  pandora_imu_stabilizer_plugin.gazebo.xacro  pandora_p3d_plugin.gazebo.xacro  pandora_wheel_physics_plugin.gazebo.xacro  ros_control_plugin.gazebo.xacro  ros_imu_plugin.gazebo.xacro  ros_skid_steer_drive_plugin.gazebo.xacro
pandora_gazebo_description/sdf_elements/sensors/: camera_effector.gazebo.xacro  kinect.gazebo.xacro  laser.gazebo.xacro  laser_sensor.gazebo.xacro  microphone_sensor.gazebo.xacro  picam.gazebo.xacro  sonar.gazebo.xacro  sonar_sensor.gazebo.xacro  temperature_sensor.gazebo.xacro  thermal.gazebo.xacro  webcam.gazebo.xacro
pandora_gazebo_description/urdf/gears/: gears.gazebo.xacro  gears_simplified.gazebo.xacro  sdf_configurations.xacro
pandora_gazebo_description/urdf/woody/: sdf_configurations.xacro  woody.gazebo.xacro  woody_simplified.gazebo.xacro
pandora_gazebo_description/woody/gazebo_urdf/: sdf_configurations.xacro  woody.gazebo.xacro
pandora_gazebo_description/woody/launch/: woody_gazebo_description.launch
pandora_gazebo_description/woody/urdf_gazebo/: differential_side_joint.gazebo.xacro  references.gazebo.xacro  sdf_configurations.xacro  woody.gazebo  woody.gazebo.xacro
pandora_gazebo_interface/: CMakeLists.txt  gazebo_interfaces.xml  gears_gazebo_interface.xml  package.xml  pandora_gazebo_interface_plugin.xml  woody_gazebo_interface.xml
pandora_gazebo_interface/config/: camera_effector_controllers.yaml  joints.yaml  linear_actuator_controller.yaml  linear_elevator_controller.yaml  linear_head_controllers.yaml  monstertruck_joints.yaml  monstertruck_pid_tuning_controllers.yaml  suspension_controllers.yaml
pandora_gazebo_interface/include/pandora_gazebo_interface/: gazebo_interface.h  gears_gazebo_interface.h  gio_gazebo_interface.h  monstertruck_gazebo_interface.h  woody_gazebo_interface.h
pandora_gazebo_interface/launch/: gears_controllers.launch  gio_controllers.launch  monstertruck_controllers.launch  woody_controllers.launch
pandora_gazebo_interface/src/: gazebo_interface.cpp  gears_gazebo_interface.cpp  gio_gazebo_interface.cpp  monstertruck_gazebo_interface.cpp  woody_gazebo_interface.cpp
pandora_gazebo_plugins/: CMakeLists.txt  package.xml
pandora_gazebo_plugins/cfg/: Differential.cfg  FrictionPhysics.cfg
pandora_gazebo_plugins/include/: pandora_imu_stabilizer_plugin.h  pandora_microphone_plugin.h  pandora_sonar_plugin.h
pandora_gazebo_plugins/include/pandora_gazebo_plugins/: pandora_co2_plugin.h  pandora_differential_plugin.h  pandora_differential_skeleton_plugin.h  pandora_fdir_plugin.h  pandora_imu_stabilizer_plugin.h  pandora_microphone_plugin.h  pandora_p3d_plugin.h  pandora_sonar_plugin.h  pandora_thermal_plugin.h  pandora_wheel_physics_plugin.h
pandora_gazebo_plugins/src/: pandora_co2_plugin.cpp  pandora_differential_plugin.cpp  pandora_differential_skeleton_plugin.cpp  pandora_fdir_plugin.cpp  pandora_imu_stabilizer_plugin.cpp  pandora_microphone_plugin.cpp  pandora_p3d_plugin.cpp  pandora_sonar_plugin.cpp  pandora_teleop_key.cpp  pandora_thermal_plugin.cpp  pandora_wheel_physics_plugin.cpp
pandora_gazebo_worlds/: CMakeLists.txt  package.xml
pandora_gazebo_worlds/launch/: go_2013_arena.launch  go_2013_arena_flat.launch  materials_test_world.launch  physics_test_world.launch  robocup_2013.launch  simple_ramps.launch  simple_room.launch  simple_test_world.launch  slope_room.launch  start.launch  testbed.launch  testcase.launch  zic_zac_room.launch  zic_zac_room_no_ramps.launch
pandora_gazebo_worlds/media/models/: c_emission.dae  s_emission.dae  sc_emission.dae  small_wall_qr3.dae  spectator_black_short.dae  spectator_black_tall.dae  spectator_blue_short.dae  spectator_blue_tall.dae  spectator_green_short.dae  t_emission.dae  (+8 more)
(+197 files in other folders)
