<?xml version="1.0"?>
<package format="2">
  <name>pandora_gazebo</name> <!-- This is a meta package! -->
  <version>0.1.0</version>
  <description>Packages used for creating a simulated environment for PANDORA ugv.</description>

  <maintainer email="zalidis@gmail.com">Chris Zalidis</maintainer>

  <license>BSD</license>

  <author>Manos Tsardoulias, Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>pandora_gazebo_description</exec_depend>
  <exec_depend>pandora_gazebo_interface</exec_depend>
  <exec_depend>pandora_gazebo_plugins</exec_depend>
  <exec_depend>pandora_gazebo_worlds</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
