<package format="2">
  <name>pandora_gazebo</name>
  <version>0.1.0</version>
  <description>Packages used for creating a simulated environment for PANDORA ugv.</description>

  <maintainer email="geromidg@gmail.com">Dimitris Geromichalos</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_gazebo/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_gazebo.git</url>

  <author>Dimitris Geromichalos</author>
  <author>Chris Zalidis</author>
  <author>Manos Tsardoulias</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>pandora_gazebo_description</exec_depend>
  <exec_depend>pandora_gazebo_interface</exec_depend>
  <exec_depend>pandora_gazebo_plugins</exec_depend>
  <exec_depend>pandora_gazebo_worlds</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
