<?xml version="1.0"?>
<package>
  <name>pandora_gazebo_controllers</name>
  <version>0.0.0</version>
  <description>Contains controllers config for simulation using Gazebo.</description>

  <maintainer email="apostoee@gmail.com">Evangelos Apostolidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_gazebo/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_gazebo</url>

  <author>Evangelos Apostolidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
