<?xml version="1.0"?>
<package format="2">
  <name>pandora_gazebo_controllers</name>
  <version>0.0.0</version>
  <description>Contains controllers config for simulation using Gazebo.</description>

  <maintainer email="apostoee@gmail.com">Evangelos Apostolidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_gazebo/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_gazebo</url>

  <author>Evangelos Apostolidis</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>pandora_motor_hardware_interface</exec_depend>
  <exec_depend>pandora_imu_hardware_interface</exec_depend>
  <exec_depend>pandora_xmega_hardware_interface</exec_depend>
  <exec_depend>pandora_arm_hardware_interface</exec_depend>

  <export>
  </export>
</package>
