<?xml version="1.0"?>
<package>
  <name>pandora_gazebo_description</name>
  <version>0.0.0</version>
  <description>Contains gazebo references and plugins for pandora robots and sensors descriptions</description>
  
  <maintainer email="geromidg@gmail.com">geromidg</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_gazebo/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_gazebo</url>

  <author>Geromi D G</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>pandora_robots_description</run_depend>
  <run_depend>pandora_gazebo_interface</run_depend>
  <run_depend>pandora_gazebo_plugins</run_depend>
  <run_depend>pandora_gazebo_controllers</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  
  <export>
  </export>
  
</package>
