<?xml version="1.0"?>
<package format="2">
  <name>pandora_gazebo_description</name>
  <version>0.0.0</version>
  <description>Contains gazebo references and plugins for pandora robots and sensors descriptions</description>
  
  <maintainer email="geromidg@gmail.com">geromidg</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_gazebo/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_gazebo</url>

  <author>Geromi D G</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>pandora_robots_description</exec_depend>
  <exec_depend>pandora_gazebo_interface</exec_depend>
  <exec_depend>pandora_gazebo_plugins</exec_depend>
  <exec_depend>pandora_gazebo_controllers</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  
  <export>
  </export>
  
</package>
