<package format="2">
  <name>pandora_gazebo_description</name>
  <version>0.1.0</version>
  <description>Contains gazebo references and plugins for pandora robots and sensors descriptions</description>
  
  <maintainer email="geromidg@gmail.com">Dimitris Geromichalos</maintainer>
  <maintainer email="zisikons@gmail.com">Konstantinos Zisis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_gazebo/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_gazebo.git</url>

  <author>Dimitris Geromichalos</author>
  <author>Konstantinos Zisis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>pandora_robots_description</exec_depend>
  <exec_depend>pandora_gazebo_interface</exec_depend>
  <exec_depend>pandora_gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  
  <export>
  </export>
</package>
