<?xml version="1.0"?>
<package>
  <name>pandora_gazebo_interface</name>
  <version>0.0.0</version>
  <description>Containts pandora gazebo interface.</description>

  <maintainer email="apostoee@gmail.com">Evangelos Apostolidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_controllers/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_controllers</url>

  <author>Evangelos Apostolidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>pandora_imu_hardware_interface</build_depend>
  <build_depend>pandora_xmega_hardware_interface</build_depend>
  <build_depend>pandora_arm_hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>pandora_imu_hardware_interface</run_depend>
  <run_depend>pandora_xmega_hardware_interface</run_depend>
  <run_depend>pandora_arm_hardware_interface</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <gazebo_ros_control
      plugin="${prefix}/pandora_gazebo_interface_plugin.xml" />
  </export>
</package>
