<?xml version="1.0"?>
<package format="2">
  <name>pandora_gazebo_interface</name>
  <version>0.0.0</version>
  <description>Containts pandora gazebo interface.</description>

  <maintainer email="apostoee@gmail.com">Evangelos Apostolidis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_controllers/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_controllers</url>

  <author>Evangelos Apostolidis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>
  <depend>control_toolbox</depend>
  <depend>pandora_imu_hardware_interface</depend>
  <depend>pandora_arm_hardware_interface</depend>
  <depend>pandora_xmega_hardware_interface</depend>
  <depend>pandora_sensor_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/gazebo_interfaces.xml" />
  </export>
</package>
