<package format="2">
  <name>pandora_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>Contains plugins used for gazebo simulation/</description>

  <maintainer email="geromidg@gmail.com">Dimitris Geromichalos</maintainer>
  <maintainer email="zisikons@gmail.com">Konstantinos Zisis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_gazebo/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_gazebo.git</url>

  <author>Dimitris Geromichalos</author>
  <author>Konstantinos Zisis</author>
  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslint</build_depend>
  
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>pandora_sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
