<package format="2">
  <name>pandora_gazebo_worlds</name>
  <version>0.1.0</version>
  <description>Contains worlds for simulation using Gazebo.</description>

  <maintainer email="geromidg@gmail.com">Dimitris Geromichalos</maintainer>
  <maintainer email="zisikons@gmail.com">Konstantinos Zisis</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/pandora-auth-ros-pkg/pandora_gazebo/issues</url>
  <url type="repository">https://github.com/pandora-auth-ros-pkg/pandora_gazebo.git</url>

  <author>Dimitris Geromichalos</author>
  <author>Konstantinos Zisis</author>
  <author>Chris Zalidis</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>pandora_robots_description</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
